<resources>
    <string name="app_name">PrimoDeal</string>
    <string name="textEmail">Email:</string>
    <string name="hintInput">Enter email here</string>
    <string name="textPassword">Password:</string>
    <string name="titleApp">PrimoDeal</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sellerChoice">I am a seller</string>
    <string name="customerChoice">I am a customer</string>
    <string name="title_activity_customer_register">CustomerRegisterActivity</string>
    <string name="registerFormTitle">Register Form: Customer</string>
    <string name="registerFormTitleSeller">Register Form: Seller</string>
    <string name="textName">Name:</string>
    <string name="textFirstName">FirstName</string>
    <string name="textBirthdate">Birthdate:</string>
    <string name="textPwConfirmation">Password confirmation:</string>
    <string name="textPw">Password</string>
    <string name="shop_address">Shop Address</string>
    <string name="buttonNewPublication">New publication</string>
    <string name="buttonMyPublication">My Publication</string>
    <string name="buttonAllPublications">All publications of Namur</string>
    <string name="TitelCreatePublication">Title</string>
    <string name="DescriptionPublicationText">Description of publication</string>
    <string name="buttonAddQuestion">Add question</string>
    <string name="QuestionPublication">Question</string>
    <string name="ResponseQuestionSellerText">Response</string>
    <string name="buttonAddResponsePublicationSeller">Add response</string>
    <string name="buttonCancelPublicationSeller">Cancel</string>
    <string name="buttonPostPublication">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="input_question">question</string>
    <string name="hint_question">Question</string>
    <string name="hint_descriptionPublication">Description of the publication</string>
    <string name="hint_titlePublication">Title</string>
    <string name="textviewMenuCommercant">Menu Commerçant</string>
    <string name="ShopName">Shop name</string>
    <string name="AddressShop">Address shop</string>
    <string name="radiobuttonActiveAnswer">With answer</string>
    <string name="titlePublicationDetail">Publication</string>
    <string name="Yesradiobutton">yes</string>
    <string name="Noradiobutton">No</string>
    <string name="Indifferentradiobutton">indifferent</string>
    <string name="buttonPostResponse">Post</string>
    <string name="swaprefresh">Swap Refresh</string>
    <string name="backActionBar">Back</string>
    <string name="deconnectionActionBar">deconnection</string>
    <string name="textviewTitleStoreCard">Store Card</string>
    <string name="buttonSeeOnGoogleMap">See on google Map</string>
    <string name="textviewAddressShop">Address :</string>
    <string name="textviewNameShopTitle">Name :</string>
    <string name="buttonStoreCard">Store card</string>
    <string name="buttonDeletePublication">Delete publication</string>
    <string name="textViewStatTitle">Title</string>
    <string name="textViewStatDescription" />
    <string name="ghj">gh</string>
</resources>
