<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:fontFamily="sans-serif"
        android:text="@string/textviewMenuCommercant"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonNewPublication"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonNewPublication"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/buttonMyPublications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonMyPublication" />

    <Button
        android:id="@+id/buttonAllPublication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAllPublications" />
</LinearLayout>