<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.primodeal.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleApp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/parent"
            app:layout_constraintLeft_toLeftOf="@+id/parent"
            app:layout_constraintRight_toRightOf="@+id/parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/textEmail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.95"
                        android:ems="10"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.87"
                        android:text="@string/textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.03"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/register"
                        tools:ignore="ButtonStyle"
                        android:onClick="goToTypeUserRegisterActivity"/>

                    <Button
                        android:id="@+id/ButtonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
