<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.primodeal.Activities.CustomerRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_titlePublication"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_titlePublication" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_descriptionPublication"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_descriptionPublication" />
                </LinearLayout>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                </android.support.v7.widget.LinearLayoutCompat>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/buttonCancelPublication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/buttonCancelPublicationSeller" />

                    <Button
                        android:id="@+id/buttonPostPublication"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/buttonPostPublication" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>